--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,129 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=DM+Serif+Text:ital@0;1&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,300;0,700;1,400&family=DM+Serif+Text:ital@0;1&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/avh2vyk.css">
 </head>
 
 <body>
-    <div class="content">
-        <div class="bottle"> <canvas id="canvas" /></div>
+    <div class="nav-overlay">
+        <div class="grid">
+            <div class="logo">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="117.034"
+                    height="39.42" viewBox="0 0 117.034 39.42">
+                    <defs>
+                        <clipPath id="clip-path">
+                            <rect id="Rectangle_1" data-name="Rectangle 1" width="117.034" height="39.42"
+                                fill="#1b2a29" />
+                        </clipPath>
+                    </defs>
+                    <g id="Group_2" data-name="Group 2" transform="translate(0 0)">
+                        <g id="Group_1" data-name="Group 1" transform="translate(0 0)" clip-path="url(#clip-path)">
+                            <path id="Path_1" data-name="Path 1"
+                                d="M29.849,4.866h-.127c-1.44-2.667-2.477-3.556-4.127-3.556h-.319V13.628c0,1.567.086,2.625,1.525,2.625v.127H19.69v-.127c1.439,0,1.523-1.058,1.523-2.625V1.311H20.9c-1.651,0-2.688.889-4.128,3.556h-.126L16.982.972H29.51Z"
+                                transform="translate(2.919 0.17)" fill="#1b2a29" />
+                            <path id="Path_2" data-name="Path 2"
+                                d="M39.656,14.348c0,1.354.063,2.075.931,2.075v.127H34.831v-.127c.867,0,.931-.721.931-2.075V9.439c0-1.439-.169-2.327-1.355-2.327a4.133,4.133,0,0,0-1.4.316v6.921c0,1.354.063,2.075.931,2.075v.127H28.184v-.127c.869,0,.932-.721.932-2.075V2.877c0-1.354-.36-1.734-1.08-1.989V.762L32.925,0h.086V7.174a5.651,5.651,0,0,1,3.81-1.966c2.011,0,2.836,1.184,2.836,3.3Z"
+                                transform="translate(4.918 0)" fill="#1b2a29" />
+                            <path id="Path_3" data-name="Path 3"
+                                d="M39.233,10.27c0-3.512,2.2-5.841,5.543-5.841,3.386,0,5.5,2.2,5.5,5.756,0,3.513-2.2,5.842-5.546,5.842-3.386,0-5.5-2.2-5.5-5.757m6.983-.042c0-2.793-.17-5.5-1.482-5.5S43.3,7.308,43.3,10.227c0,2.794.168,5.5,1.48,5.5s1.44-2.582,1.44-5.5"
+                                transform="translate(6.882 0.777)" fill="#1b2a29" />
+                            <path id="Path_4" data-name="Path 4"
+                                d="M67.312,13.571c0,1.354.063,2.075.931,2.075v.127H62.487v-.127c.867,0,.931-.721.931-2.075V8.661c0-1.439-.169-2.327-1.354-2.327a3.916,3.916,0,0,0-1.439.339,5.585,5.585,0,0,1,.085,1.058v5.841c0,1.354.063,2.075.931,2.075v.127H55.884v-.127c.869,0,.931-.721.931-2.075V8.661c0-1.439-.168-2.327-1.354-2.327a3.814,3.814,0,0,0-1.354.316v6.921c0,1.354.062,2.075.931,2.075v.127H49.28v-.127c.867,0,.932-.721.932-2.075V7.519c0-1.355-.36-1.735-1.08-1.99V5.4l4.889-.932h.086V6.4A5.557,5.557,0,0,1,57.874,4.43a2.443,2.443,0,0,1,2.708,2.052A5.811,5.811,0,0,1,64.476,4.43c2.011,0,2.836,1.184,2.836,3.3Z"
+                                transform="translate(8.619 0.777)" fill="#1b2a29" />
+                            <path id="Path_5" data-name="Path 5"
+                                d="M76.489,14.1a3.47,3.47,0,0,1-3.09,1.927c-1.608,0-1.99-.931-2.075-1.714a4.017,4.017,0,0,1-3.154,1.714,2.259,2.259,0,0,1-2.5-2.327c0-1.609,1.144-2.688,3.6-3.365l1.862-.508V8.747c0-.594,0-2.709-1.968-2.709a3.469,3.469,0,0,0-2.942,1.989L66.1,7.964A4.983,4.983,0,0,1,71.049,4.43,3.563,3.563,0,0,1,74.9,8.365v4.614c0,.867,0,1.482.657,1.482a1.057,1.057,0,0,0,.8-.444Zm-5.355.065V10.123l-.381.169a2.12,2.12,0,0,0-1.566,2.371c0,1.184.571,1.841,1.164,1.841a1.168,1.168,0,0,0,.783-.339"
+                                transform="translate(11.52 0.777)" fill="#1b2a29" />
+                            <path id="Path_6" data-name="Path 6"
+                                d="M75.314,15.519l-.19-3.386h.127c.931,1.694,1.883,3.6,3.766,3.6,1.017,0,1.863-.53,1.863-1.546,0-1.058-.91-1.481-2.285-2.2l-.847-.445a3.756,3.756,0,0,1-2.433-3.428c0-2.37,1.926-3.683,4.254-3.683a11.858,11.858,0,0,1,3.154.465V7.731h-.128c-.8-1.5-1.841-3.006-3.343-3.006A1.363,1.363,0,0,0,77.705,6.1c0,1.1,1.016,1.546,1.736,1.927l.846.444c1.439.762,2.984,1.525,2.984,3.683,0,2.412-1.905,3.873-4.742,3.873a10.04,10.04,0,0,1-3.216-.508"
+                                transform="translate(13.178 0.777)" fill="#1b2a29" />
+                            <path id="Path_7" data-name="Path 7"
+                                d="M0,24.263C0,16.4,5.711,10.934,13.082,10.934A25.756,25.756,0,0,1,21.228,12.2v7.052h-.213c-1.975-4.371-4.442-7.828-8.11-7.828-4.371,0-5.711,5.4-5.711,12.73,0,7.123,1.021,12.8,5.535,12.8,1.976,0,2.433-1.269,2.433-3.316V29.553c0-2.611-.141-4.233-2.185-4.373v-.212h9.872v.212c-1.058.14-1.128,1.762-1.128,4.373v5.36a17.153,17.153,0,0,1-9.239,2.539C4.514,37.451,0,32.372,0,24.263"
+                                transform="translate(0 1.918)" fill="#1b2a29" />
+                            <path id="Path_8" data-name="Path 8"
+                                d="M35.526,17.282l-1.235,5.5h-.21a4.58,4.58,0,0,0-3.491-2.046,3.762,3.762,0,0,0-1.694.424V32.233c0,2.257.107,3.456,1.553,3.456V35.9h-9.59v-.212c1.445,0,1.55-1.2,1.55-3.456V22.149c0-2.257-.6-2.892-1.8-3.316v-.21l8.144-1.553h.14V20.7c1.553-2.22,3.175-3.7,5.148-3.7a4.784,4.784,0,0,1,1.482.281"
+                                transform="translate(3.615 2.982)" fill="#1b2a29" />
+                            <path id="Path_9" data-name="Path 9"
+                                d="M49.89,24.687h-9.8c.107,5.432,1.41,8.605,5.043,8.605A5.442,5.442,0,0,0,49.679,31l.212.141c-1.55,2.82-3.738,5.184-7.864,5.184-5.713,0-8.428-4.443-8.428-9.309C33.6,21.515,37.2,17,42.908,17c4.725,0,7.195,3.1,6.982,7.686m-9.8-.563H44.53c.317-4.055.212-6.629-1.763-6.629-2.292,0-2.68,3.491-2.68,6.629"
+                                transform="translate(5.894 2.982)" fill="#1b2a29" />
+                            <path id="Path_10" data-name="Path 10"
+                                d="M65.31,24.783h-9.8c.107,5.432,1.41,8.605,5.043,8.605A5.442,5.442,0,0,0,65.1,31.1l.212.141c-1.55,2.82-3.738,5.184-7.864,5.184-5.713,0-8.428-4.443-8.428-9.309,0-5.5,3.6-10.015,9.309-10.015,4.725,0,7.195,3.1,6.982,7.686m-9.8-.563H59.95c.317-4.055.212-6.629-1.763-6.629-2.292,0-2.68,3.491-2.68,6.629"
+                                transform="translate(8.599 2.999)" fill="#1b2a29" />
+                            <path id="Path_11" data-name="Path 11"
+                                d="M83.917,32.179c0,2.257.106,3.456,1.552,3.456v.212H75.877v-.212c1.447,0,1.552-1.2,1.552-3.456V24c0-2.4-.282-3.88-2.256-3.88a6.882,6.882,0,0,0-2.328.529V32.179c0,2.257.107,3.456,1.552,3.456v.212h-9.59v-.212c1.446,0,1.552-1.2,1.552-3.456V22.1c0-2.257-.6-2.892-1.8-3.315v-.212L72.7,17.018h.14v3.209c1.657-1.693,3.879-3.279,6.347-3.279,3.35,0,4.725,1.975,4.725,5.5Z"
+                                transform="translate(11.325 2.973)" fill="#1b2a29" />
+                            <path id="Path_12" data-name="Path 12"
+                                d="M83.978,22.77c1.9-.706,4.3-2.47,4.3-4.337,0-1.34-1.339-1.587-2.82-1.869a3.055,3.055,0,0,1-2.75-2.962,2.805,2.805,0,0,1,3.033-2.75c2.116,0,4.514,1.587,4.514,5.078,0,4.408-3.526,6.312-6.206,7.052Z"
+                                transform="translate(14.508 1.903)" fill="#1b2a29" />
+                            <path id="Path_13" data-name="Path 13"
+                                d="M88.337,35.291l-.319-5.642h.212c1.552,2.822,3.138,6,6.277,6,1.693,0,3.1-.882,3.1-2.575,0-1.763-1.516-2.467-3.81-3.667l-1.41-.741c-1.269-.669-4.054-2.044-4.054-5.711,0-3.949,3.208-6.136,7.087-6.136a19.749,19.749,0,0,1,5.254.776v4.725h-.212c-1.34-2.5-3.068-5.007-5.571-5.007A2.269,2.269,0,0,0,92.321,19.6c0,1.834,1.691,2.574,2.892,3.209l1.409.741c2.4,1.269,4.972,2.539,4.972,6.134,0,4.02-3.174,6.454-7.9,6.454a16.729,16.729,0,0,1-5.36-.847"
+                                transform="translate(15.44 2.949)" fill="#1b2a29" />
+                        </g>
+                    </g>
+                </svg>
+            </div>
+            <div class="contact">
+                <div class="contact-inner">
+                    Contact
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21.241" height="21.241" viewBox="0 0 21.241 21.241">
+                        <g id="Layer_1-2" transform="translate(0.357 0.51)">
+                            <path id="Path_14" data-name="Path 14" d="M.35,20.024,19.884.49M7.66.49H19.884V12.481"
+                                transform="translate(0 0)" fill="none" stroke="#efab24" stroke-width="2" />
+                        </g>
+                    </svg>
+
+                </div>
+            </div>
+            <div class="purchase">
+                <div class="purchase-inner">
+                    Purchase
+                    <svg xmlns="http://www.w3.org/2000/svg" width="21.241" height="21.241" viewBox="0 0 21.241 21.241">
+                        <g id="Layer_1-2" transform="translate(0.357 0.51)">
+                            <path id="Path_14" data-name="Path 14" d="M.35,20.024,19.884.49M7.66.49H19.884V12.481"
+                                transform="translate(0 0)" fill="none" stroke="#efab24" stroke-width="2" />
+                        </g>
+                    </svg>
+
+                </div>
+            </div>
+        </div>
+        <div class="nav-line"></div>
     </div>
 
-    <p class="text">Simply the best</p>
+
+    <div class="bottle-content">
+        <div class="grid">
+            <div class="bottle">
+                <div class="canvas-container">
+                    <canvas id="canvas" />
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="main-content">
+        <div class="grid">
+
+            <h1 class="title">
+                Speciality Coffee Liqueur
+            </h1>
+            <p class="text">
+                Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient
+                montes, nascetur ridiculus mus. </p>
+        </div>
+    </div>
+
+
+
+
+    <div class="vertical-lines grid">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
     <script type="module" src="scripts.js"></script>
 </body>
 
